[package]
name = "triton-mock"
version = "0.3.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
env_logger = "0.11.2"
flate2 = "1.0.28"
log = "0.4.20"
prost = "0.12.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
] }
tokio-stream = "0.1.14"
tonic = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
prost-build-config = "0.6.3"
